# TDbase

./: .gitattributes  .gitignore  README.md  foo_n_100.sql  foo_v_80.sql
src/: CMakeLists.txt  Makefile
src/.cache/clangd/index/: DWithinJoin.cpp.9DF1DBEB02BDEA5F.idx  DistanceJoin.cpp.2ED913011DC2AE44.idx  Facet.cpp.F4FD223A9AC74AB1.idx  Half_Edge.cpp.71180EED8288990A.idx  IntersectionJoin.cpp.CBB0D8C96F46A9B0.idx  KNNJoin.cpp.61D4BC83C33A9D50.idx  RTree.h.A263892C6E9B22BB.idx  SpatialJoin.cpp.DE8A194CE186560E.idx  SpatialJoin.h.08A617C2E87AF4E5.idx  TriInt.cpp.99FC642056890F9A.idx  aab.h.B2C04D3CE565B64C.idx  cache.cpp.6FCC9D6525BA59ED.idx  candidate.h.14CC32F99E3244EC.idx  computing_cpu.cpp.570BE236E870AC09.idx  computing_gpu.cu.828366F553FA3EFC.idx  cuda_common.cu.F7F9AF0B2EF782DA.idx  cuda_util.cuh.A54A9A10665C401E.idx  develop.cpp.BC444BF88709CF4C.idx  face_classifier.cpp.BDA055553C519677.idx  face_classifier.h.643CA9D21FAC7C4F.idx  geometry.h.B3164012377F134E.idx  geometry_computer.cpp.23795CCD9C1F66B6.idx  himesh.cpp.9A10B4A684DA3AF9.idx  himesh.h.B55B7168FB279EB7.idx  himesh_IO.cpp.FF2B74966D0D82BF.idx  himesh_aabb.cpp.C83A5635E3B52947.idx  himesh_box.cpp.8C9E86EA0812E23D.idx  himesh_comp.cpp.65ED7405F2441285.idx  himesh_decomp.cpp.099CB3CEB2724CA2.idx  himesh_hausdorff.cpp.79AD08F6D228605D.idx  himesh_query.cpp.EF128D839CFE9283.idx  himesh_retrieve.cpp.8C52256045F11E0A.idx  himesh_skeleton.cpp.0A3277EAF5D1360E.idx  himesh_utils.cpp.A61F04B9A5CFEE20.idx  (+20 more)
src/depreciated/: SegDist.cpp.dep  SegDist.cu.dep  TriInt.cu.dep
src/geometry/: TriInt.cpp  computing_cpu.cpp  computing_gpu.cu  cuda_common.cu  cuda_util.cuh  geometry_computer.cpp
src/include/: RTree.h  SpatialJoin.h  aab.h  candidate.h  geometry.h  himesh.h  index.h  mygpu.h  popl.h  query_context.h  tile.h  util.h
src/index/: octree.cpp  stree.cpp
src/join/: DWithinJoin.cpp  DistanceJoin.cpp  IntersectionJoin.cpp  KNNJoin.cpp  SpatialJoin.cpp
src/mymesh/: Facet.cpp  Half_Edge.cpp  develop.cpp  mesh_IO.cpp  mesh_fix.cpp  mymesh.cpp  mymesh.h
src/mytest/: face_classifier.cpp  face_classifier.h  test_face_classifier.cpp
src/postgis/: CMakeLists.txt  config.h  intersection.cpp  main.cpp  nn.cpp  nn_origin.cpp  tables.sql  within.cpp  within_origin.cpp
src/simplifier/: H5ToOFF.cpp  gauland_heckbert.cpp  lindstrom_turk.cpp  openmesh.cpp  wrap.cpp
src/spatial/: himesh.cpp  himesh_IO.cpp  himesh_aabb.cpp  himesh_box.cpp  himesh_comp.cpp  himesh_decomp.cpp  himesh_hausdorff.cpp  himesh_query.cpp  himesh_retrieve.cpp  himesh_skeleton.cpp  himesh_utils.cpp  himesh_wrapper.cpp  spatial_common.cpp
src/storage/: cache.cpp  cache.h  tile.cpp  tile_IO.cpp
src/tools/: range_analysis.cpp  simulator.cpp  tdbase.cpp
(+14 files in other folders)
